Replace Stream.collect(Collectors.toList()) with the simpler Stream.toList()